fix git push dialog layout issues

--- a/styles/dialogs-all.less
+++ b/styles/dialogs-all.less
@@ -37,3 +37,17 @@
         }
     }
 }
+
+.git {
+    .current-tracking-branch {
+        display: flex;
+        gap: 8px;
+    }
+    .input-append {
+        display: flex;
+        align-items: center;
+        button {
+            height: 28px;
+        }
+    }
+}
